tests/common/negative/01_domain_frame_syntax.frs
@@target rust

// NEGATIVE TEST: Frame syntax in domain should fail Rust compilation
// Expected error: expected type, found keyword `var`

@@system NegativeTest {
    domain:
        var count: i32 = 0

    machine:
        $Ready { }
}

fn main() { }
